--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,30 @@
 h1, h2 {
+    color: rgb(223, 241, 241);
     text-align: center;
     margin: 0;
 }
 .selection-container {
     background: rgb(110, 171, 221);
 }
+.match {
+    display: flex;
+align-items: center;
+justify-content: space-evenly;
+}
+.buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.btn-paper {
+    align-self: flex-end;
+}
+.computer-choice {
+    background: yellow;
+    height: 50px;
+    width: 50px;
+}
 .score-container {
     background: rgb(51, 112, 161);
-    height: 100%;
-    width: 100%;
+    display: flex;
 }
