--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,9 @@ body {
 .match {
     background: rgb(142, 201, 250);
 }
-.selection {
+.selections {
+    display: flex;
+    justify-content: space-evenly;
     
 }
 .btn {
@@ -25,9 +27,14 @@ body {
     width: 150px;
 }
 .versus {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 150px;
     width: 150px;
     font-size: 40px;
+    margin: 0;
+    padding: 0;
 
 }
 .computer-choice {
