--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ h1, h2 {
     color: rgb(218, 238, 238);
     text-align: center;
     margin: 0;
+    padding: 0;
     font-size: 30px;
 }
 h1 {
@@ -19,28 +20,42 @@ body {
 }
 .selections {
     display: flex;
-    justify-content: space-evenly;
+    flex: 1 1 0;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 20px;
+    margin-top: 35px;
     
+}
+.buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 400px;
 }
 .btn {
     height: 150px;
     width: 150px;
 }
+.paper {
+    align-self: flex-end;
+}
 .versus {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 150px;
-    width: 150px;
+    width: 400px;
     font-size: 40px;
     margin: 0;
     padding: 0;
+    color:rgb(22, 127, 212);
 
 }
 .computer-choice {
     background: rgb(218, 238, 238);
     height: 150px;
-    width: 150px;
+    width: 400px;
+    margin-right: 25px;
 
 }
 
