--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,13 @@ body {
 .btn {
     height: 150px;
     width: 150px;
+    background: none;
+    
+    
+}
+img {
+    width: 100%;
+    height: auto;
 }
 .paper {
     align-self: flex-end;
